--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <h1>作成ページ</h1>
-
+<%= render 'form', message: @message %>
 <%= form_with(model: @task, local: true) do |f| %>
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
