--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,9 +9,9 @@
     </div>
   <% end %>
   
-  <%= f.label :status, 'タイトル' %>
+  <%= f.label :status, 'Status' %>
   <%= f.text_field :status %>
-  <%= f.label :content, 'タスク' %>
+  <%= f.label :content, 'Content' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
