--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,7 @@
 <h1>id: <%= @task.id %> の詳細ページ</h1>
 
-<p>タイトル: <%= @task.status %></p>
-<p><%= @task.content %></p>
+<p>Status: <%= @task.status %></p>
+<p>Content: <%= @task.content %></p>
 <%= link_to '一覧に戻る', tasks_path %>
 <%= link_to 'このタスクを編集する', edit_task_path(@task) %>
 <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
