--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-6">
     
-    <%= form_with(model: @task, local: true) do |f| %>
-
+    <%= form_with(model: task, local: true) do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
       <div class="form-group">
         <%= f.label :status, 'Status' %>
         <%= f.text_field :status, class: 'form-control' %>
